# math-soft

./: .gitignore  README.md
ass01/: environment.tex
ass02/: makefile  navier-stokes.tex  references.bib
ass03/: duplicate_checking.sh  file1.txt  file2.txt  file3.txt  file4.txt
ass04/: code.c  interp.eps  interp.tex  makefile
ass05/: makefile
ass06/: CMakeLists.txt  Chicken.cpp  Chicken.h  Doxyfile  main.cpp
ass07/: makefile  plot_ellipsoid.gnu
proj/: CMakeLists(备用).txt  Makefile  README.md  final.tex  script.gp  step-3(备用).cc  step-3.cc
